--- a/index.html
+++ b/index.html
@@ -29,35 +29,35 @@
                 </ul>
             </div>
         </nav>
-        <section id="predictionSection" style="display: block;">
+        <section id="predictionSection" style="display: none;">
             <div style="display: inline-block;">
                 <div class="trading-container">
                     <div class="trading-indicator"></div>
                     <div style="margin-top: 0.17rem; margin-left: 1.27rem;">
                         <p class="trading-title">Trading Advice</p>
                     </div>
-                    <div style="margin-top: 0.49rem; margin-left: 0.38rem;  font-size: 0;">
+                    <div style="margin-top: 0.49rem; margin-left: 0.34rem;  font-size: 0;">
                         <div style="display: inline-block;">
-                            <p class="trading-subtitle">Price Change</p>
+                            <p class="trading-subtitle" style="padding-top: 0.05rem;">Price Change</p>
                         </div>
                         <div style="margin-left: 0.22rem; display: inline-block; vertical-align: top;">
                             <p class="trading-data" style="font-size: 0.3rem;">+1.88<span style="color: #a2a9c4;"> / </span>+0.7%</p>
                             <p style="font-family: Helvetica; font-size: 0.15rem; color: #a9adbc; text-align: right;">Price prediction in 30 min</p>
                         </div>
                     </div>
-                    <div style="margin-top: 0.35rem; margin-left: 0.38rem; font-size: 0;">
+                    <div style="margin-top: 0.35rem; margin-left: 0.34rem; font-size: 0;">
                         <div style="display: inline-block;">
                             <p class="trading-subtitle">Limit Buy at</p>
                         </div>
-                        <div style="display: inline-block; margin-left: 1.1rem;">
+                        <div style="display: inline-block; margin-left: 1.2rem;">
                             <p class="trading-data">USD 268.91</p>
                         </div>
                     </div>
-                    <div style="margin-top: 0.37rem; margin-left: 0.38rem; font-size: 0;">
+                    <div style="margin-top: 0.37rem; margin-left: 0.34rem; font-size: 0;">
                         <div style="display: inline-block;">
                             <p class="trading-subtitle">Limit Sell at</p>
                         </div>
-                        <div style="display: inline-block; margin-left: 1.1rem;">
+                        <div style="display: inline-block; margin-left: 1.2rem;">
                             <p class="trading-data">USD 268.91</p>
                         </div>
                     </div>
@@ -106,14 +106,16 @@
                 </div>
             </div>
         </section>
-        <section id="historySection" style="display: none;">
+        <section id="historySection" style="display: block;">
             <div style="display: inline-block;">
                 <div class="tweets-container2">
                     <div style="width: 4rem; height: 0.64rem; background-color: #fff; border-top-right-radius: 0.05rem; border-top-left-radius: 0.05rem; border-bottom: solid 0.01rem #dfe2ee;">
                         <p class="tweet-title">Relevant Tweets</p>
                     </div>
                     <div style="margin-left: 0.15rem;">
-                        <div class="tweets"></div>
+                        <div class="tweets">
+                            <p>fsdf</p>
+                        </div>
                         <div class="tweets"></div>
                         <div class="tweets"></div>
                         <div class="tweets"></div>
@@ -132,26 +134,32 @@
                 <div class="twitterChange-container" style="vertical-align: top;">
                     <div style="margin-top: 0.25rem;">
                         <p class="subtitle2" style="margin-left: 0.36rem; display: inline;">Twitter-influenced Changes</p>
-                        <p style="font-family: Helvetica; font-size: 0.36rem; letter-spacing: 0.015rem; color: #62667a; display: inline; margin-left: 0.51rem;">16</p>
+                        <p style="font-family: Helvetica; font-size: 0.36rem; letter-spacing: 0.015rem; color: #62667a; display: inline; margin-left: 0.6rem;">16</p>
                     </div>
                     <div style="margin-top: 0.4rem;">
-                        <p class="subtitle3" style="margin-left: 0.35rem; display: inline;">Positive <span style="font-family: Helvetica; font-size: 0.16rem; font-weight: bold; letter-spacing: 0.007rem; color: #62667a;">10</span></p>
-                        <p class="subtitle3" style="display: inline; margin-left: 1.71rem;">Negative <span style="font-family: Helvetica; font-size: 0.16rem; font-weight: bold; letter-spacing: 0.007rem; color: #62667a;">6</span></p>
+                        <p class="subtitle3" style="margin-left: 0.36rem; display: inline;">Positive <span style="font-family: Helvetica; font-size: 0.16rem; font-weight: bold; letter-spacing: 0.007rem; color: #62667a;">10</span></p>
+                        <p class="subtitle3" style="display: inline; margin-left: 1.93rem;">Negative <span style="font-family: Helvetica; font-size: 0.16rem; font-weight: bold; letter-spacing: 0.007rem; color: #62667a;">6</span></p>
                     </div>
                 </div>
                 <div class="predictedChange-container" style="vertical-align: top;">
                     <div style="margin-top: 0.25rem;">
                         <p class="subtitle2" style="margin-left: 0.36rem; display: inline;">Predicted Changes</p>
-                        <p style="font-family: Helvetica; font-size: 0.36rem; letter-spacing: 0.015rem; color: #62667a; display: inline; margin-left: 0.51rem;">16</p>
+                        <p style="font-family: Helvetica; font-size: 0.36rem; letter-spacing: 0.015rem; color: #62667a; display: inline; margin-left: 1.4rem;">16</p>
                     </div>
                     <div style="margin-top: 0.4rem;">
-                        <p class="subtitle3" style="margin-left: 0.35rem; display: inline;">Positive <span style="font-family: Helvetica; font-size: 0.16rem; font-weight: bold; letter-spacing: 0.007rem; color: #62667a;">10</span></p>
-                        <p class="subtitle3" style="display: inline; margin-left: 1.71rem;">Negative <span style="font-family: Helvetica; font-size: 0.16rem; font-weight: bold; letter-spacing: 0.007rem; color: #62667a;">6</span></p>
+                        <p class="subtitle3" style="margin-left: 0.36rem; display: inline;">Positive <span style="font-family: Helvetica; font-size: 0.16rem; font-weight: bold; letter-spacing: 0.007rem; color: #62667a;">10</span></p>
+                        <p class="subtitle3" style="display: inline; margin-left: 1.93rem;">Negative <span style="font-family: Helvetica; font-size: 0.16rem; font-weight: bold; letter-spacing: 0.007rem; color: #62667a;">6</span></p>
                     </div>
                 </div>
                 <div class="otherInfo-container" style="vertical-align: top;">
-                    <p class="subtitle2" style="margin-top: 0.35rem; margin-left: 0.36rem;">Classification Accuracy</p>
-                    <p class="subtitle2" style="margin-top: 0.44rem; margin-left: 0.36rem;">Mean Square Error</p>
+                    <div style="margin-top: 0.37rem;">
+                        <p class="subtitle2" style="margin-left: 0.36rem; display: inline;">Classification Accuracy</p>
+                        <p style="font-family: Helvetica; font-size: 0.36rem; letter-spacing: 0.015rem; color: #62667a; display: inline; margin-left: 0.7rem;">65%</p>
+                    </div>
+                    <div style="margin-top: 0.5rem;">
+                        <p class="subtitle2" style="margin-left: 0.36rem; display: inline;">Mean Square Error</p>
+                        <p style="font-family: Helvetica; font-size: 0.36rem; letter-spacing: 0.015rem; color: #62667a; display: inline; margin-left: 1.08rem;">0.64</p>
+                    </div>
                 </div>
             </div>
         </section>
