--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
                 </div>
             </div>
             <div style="display: inline-block; vertical-align: top; font-size: 0;">
-                <div class="chart-container">
-<!--
-                    <p class="chart-title">History Stock Price</p>
-                    <svg width="1000" height="400" style="margin-left: 1.875rem; margin-top: 2.188rem;"></svg>
--->
+                <div class="chart-container" style="text-align: center; position: relative;">
+                    <p class="chart-title" style="margin-top: 0.26rem;">History Stock Price</p>
+                    <div style="width: 13rem; height: 5rem; margin-top: 0.5rem; position: absolute; left: 50%; transform: translate(-50%, 0);">
+                        <svg id="history-chart" width="100%" height="100%" viewBox="0 0 1000 400" preserveAspectRatio="xMidYMid meet"></svg>
+                    </div>
                 </div>
                 <div class="twitterChange-container" style="vertical-align: top;">
                     <div style="margin-top: 0.25rem;">
